Cleanup resource generator code
Signed-off-by: Alexander Pinchuk <alexander.v.pinchuk@gmail.com>